Added Checkbox for Modal in theme settings

--- a/sections/dev__modal.liquid
+++ b/sections/dev__modal.liquid
@@ -2,10 +2,6 @@
 
 {%- style -%}
 
-.modal-container h2{
-       /*  background:red;
-        display:block; */
-    }
   .modal-dark-overlay {
     display: none;
     position: fixed;
@@ -43,16 +39,15 @@
   #closeModal{
     position:absolute;
     right:20px;
+    cursor: pointer;
   }
 {%- endstyle -%}
-
-<button id="openModal" class="px-2 py-1 bg-red-300 color-red-100 rounded-[10px]">Open Modal</button>
 
 <div class="modal-dark-overlay"></div>
 
 <div class="modal-container">
     <div class="modal">
-        <button id="closeModal">X</button>
+        <button id="closeModal"> X </button>
         <h2>This is a Modal</h2>
         <p>Some text in the Modal..</p>
     </div>
@@ -60,21 +55,19 @@
 
 
 <script>
-
+  
   const showOverlay = () => document.querySelector(".modal-dark-overlay").style.display = "block";
   const showModal = () => document.querySelector(".modal-container").style.display = "block";
 
   const hideOverlay = () => document.querySelector(".modal-dark-overlay").style.display = "none";
   const hideModal = () => document.querySelector(".modal-container").style.display = "none";
 
-  // Open Modal
-  document.querySelector("#openModal").onclick = function(){
+  document.addEventListener('DOMContentLoaded', function () {
     showOverlay();
     showModal();
-
-  }
-
-   // Close Modal
+  });
+    
+  // Close Modal
   document.querySelector("#closeModal").onclick = function(){
     hideOverlay();
     hideModal();
@@ -83,11 +76,10 @@
 
   // Close Modal when clicked outside the modal
   window.onclick = function(e){
-  if(e.target === document.querySelector('.modal-container')){
-    hideOverlay();
-    hideModal();
-  }
-
+    if(e.target === document.querySelector('.modal-container')){
+      hideOverlay();
+      hideModal();
+    }
   }
 
 </script>
