--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -73,10 +73,13 @@
     </a>
 
     {% comment %} {% sections 'header-group' %} {% endcomment %}
-
+    
     {% section 'announcement-bar' %}
     {% section 'dev__header' %}
-    {% section 'dev__modal' %}
+
+    {% if settings.initial_modal_enabled and template == 'index' %}
+      {% section 'dev__modal' %}
+    {% endif %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
