--- a/sections/dev__modal.liquid
+++ b/sections/dev__modal.liquid
@@ -2,51 +2,11 @@
 
 {%- style -%}
 
-  .modal-dark-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    overflow:auto;
-  }
-
-  .modal-container{
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .modal-container > .modal {
-    position:relative;
-    width:40%;
-    height:auto;
-    background: #fff;
-    margin:0 auto;
-    padding: 20px 40px 10px 40px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    top:25%;
-  }
-
-  #closeModal{
-    position:absolute;
-    right:20px;
-    cursor: pointer;
-  }
-
   .icon-cross{
     width:20px;
   }
   
   @media screen and (max-width: 768px) {
-    .modal-container > .modal {
-      width:80%;
-      padding: 20px 10px 10px 20px;
-    }
 
     .icon-cross{
       width:18px;
@@ -54,14 +14,14 @@
   }
 {%- endstyle -%}
 
-<div class="modal-dark-overlay"></div>
+<div class="modal-dark-overlay fixed top-0 left-0 w-full h-full bg-black bg-opacity-70 overflow-auto"></div>
 
-<div class="modal-container">
-    <div class="modal">
-        <button id="closeModal"> {% render 'icon-cross' %} </button>
-        <h2 class="text-sm md:text-xl font-semibold mb-2 md:mb-4">Welcome to Our Store!</h2>
+<div class="modal-container fixed top-0 left-0 w-full h-full">
+    <div class="modal relative w-[80%] md:w-[40%] mx-auto bg-white px-[20px] pt-[18px] pb-[12px] md:px-[40px] md:py-[20px] rounded-[10px] shadow-lg top-[25%]">
+        <button id="closeModal" class="close absolute right-[20px] cursor-pointer"> {% render 'icon-cross' %} </button>
+        <h2 class="text-sm md:text-xl font-semibold mb-2 md:mb-4">Welcome to Our Store! 7</h2>
         <p class="mb-2 md:mb-6 text-xs md:text-base">We're delighted to have you here. Enjoy your shopping experience and feel free to explore our wide range of products.</p>
-        <button id="acknowledgeButton" class="bg-blue-500 text-white px-2 py-1 md:px-4 md:py-1 rounded-full text-xs md:text-base">Okay</button>
+        <button id="acknowledgeButton" class="bg-purple-900 text-white px-2 py-1 md:px-4 md:py-1 rounded-full text-xs md:text-base">Okay</button>
     </div>
 </div>
 
