--- a/sections/dev__modal.liquid
+++ b/sections/dev__modal.liquid
@@ -1,7 +1,7 @@
 <!-- modal.liquid -->
 
 {%- style -%}
-
+  
   .icon-cross{
     width:20px;
   }
@@ -12,6 +12,7 @@
       width:18px;
     }
   }
+
 {%- endstyle -%}
 
 <div class="modal-dark-overlay fixed top-0 left-0 w-full h-full bg-black bg-opacity-70 overflow-auto"></div>
@@ -19,9 +20,9 @@
 <div class="modal-container fixed top-0 left-0 w-full h-full">
     <div class="modal relative w-[80%] md:w-[40%] mx-auto bg-white px-[20px] pt-[18px] pb-[12px] md:px-[40px] md:py-[20px] rounded-[10px] shadow-lg top-[25%]">
         <button id="closeModal" class="close absolute right-[20px] cursor-pointer"> {% render 'icon-cross' %} </button>
-        <h2 class="text-sm md:text-xl font-semibold mb-2 md:mb-4">Welcome to Our Store! 7</h2>
+        <h2 class="text-sm md:text-xl font-semibold mb-2 md:mb-4">Welcome to Our Store! 8</h2>
         <p class="mb-2 md:mb-6 text-xs md:text-base">We're delighted to have you here. Enjoy your shopping experience and feel free to explore our wide range of products.</p>
-        <button id="acknowledgeButton" class="bg-purple-900 text-white px-2 py-1 md:px-4 md:py-1 rounded-full text-xs md:text-base">Okay</button>
+        <button id="acknowledgeButton" class="bg-purple-900 text-white px-2 py-1 md:px-4 md:py-1 rounded-full text-xs md:text-base hover:bg-purple-600 hover:text-slate-200">Okay</button>
     </div>
 </div>
 
