--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -1,49 +1,46 @@
-{{ 'newsletter.css' | asset_url | stylesheet_tag }}
+<!-- sections/newsletter.liquid -->
 
-<section class="newsletter-section">
-  <div class="container">
-    <div class="newsletter-wrapper">
-      <div class="newsletter-content">
-        <h1 class="newsletter-content__title">{{ section.settings.newsletter_title }}</h1>
-        <p class="newsletter-content__subtitle">{{ section.settings.newsletter_subtitle }}</p>
-      </div>
-      
-      <div class="newsletter-form">
-        {% form 'customer', class: 'newsletter-form__form' %}
-          <div class="field">
+<section class="bg-white dark:bg-gray-900" style="background-color: {{ section.settings.background_color }};">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+    <div class="mx-auto max-w-screen-md sm:text-center">
+      <h2 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white">
+        {{ section.settings.newsletter_title }}
+      </h2>
+      <p class="mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">
+        {{ section.settings.newsletter_subtitle }}
+      </p>
+      <form action="#" method="post">
+        <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
+          <div class="relative w-full">
+            <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+              <!-- Icon -->
+            </div>
             <input
-              id="NewsletterForm--{{ section.id }}"
+              class="block p-3 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              placeholder="{{ section.settings.newsletter_input_placeholder }}"
               type="email"
               name="contact[email]"
-              class="field__input newsletter-form__input"
-              value="{{ form.email }}"
-              aria-required="true"
-              autocorrect="off"
-              autocapitalize="off"
-              autocomplete="email"
-              placeholder= {{ section.settings.newsletter_email_placeholder }}
+              id="email"
               required
             >
+          </div>
+          <div>
             <button
               type="submit"
-              class="newsletter-form__submit field__button btn"
               name="commit"
-              id="newsletter_button"
+              class="py-3 px-5 w-full text-sm font-medium text-center text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
             >
-              {{ section.settings.newsletter_button }}
+              {{ section.settings.newsletter_button_text }}
             </button>
           </div>
-        {% endform %}
-      </div>
-      
-      <div class="newsletter-condition">
-        <br/>
-        <h6 class="newsletter-content__condition">{{ section.settings.newsletter_condition }}</h6>
-      </div>
+        </div>
+        <div class="mx-auto max-w-screen-sm text-sm text-left text-gray-500 newsletter-form-footer dark:text-gray-300 text-center">
+          {{ section.settings.newsletter_privacy_policy }}
+        </div>
+      </form>
     </div>
   </div>
 </section>
-
 
 {% schema %}
 {
@@ -51,39 +48,44 @@
   "settings": [
     {
       "type": "text",
-      "label": "Newsletter Title",
       "id": "newsletter_title",
-      "default": "Join the club⚡"
+      "label": "Title",
+      "default": "Sign up for our newsletter"
     },
     {
       "type": "textarea",
-      "label": "Newsletter Subtitle",
       "id": "newsletter_subtitle",
-      "default": "Sign up for the newsletter and receive a 15% discount on your first order."
+      "label": "Subtitle",
+      "default": "Stay up to date with the roadmap progress, announcements and exclusive discounts feel free to sign up with your email."
     },
     {
       "type": "text",
-      "label": "Newsletter Email Placeholder",
-      "id": "newsletter_email_placeholder",
-      "default": "Email"
+      "id": "newsletter_input_placeholder",
+      "label": "Input Placeholder",
+      "default": "Enter your email"
     },
     {
       "type": "text",
-      "label": "Newsletter Button",
-      "id": "newsletter_button",
+      "id": "newsletter_button_text",
+      "label": "Button Text",
       "default": "Subscribe"
     },
     {
       "type": "text",
-      "label": "Newsletter Condition",
-      "id": "newsletter_condition",
-      "default": "*By continuing, you agree to the Terms and Conditions and data usage described in our Privacy Policy."
+      "id": "newsletter_privacy_policy",
+      "label": "Privacy Policy Text",
+      "default": "We care about the protection of your data. Read our Privacy Policy."
+    },
+    {
+      "type": "color",
+      "id": "background_color",
+      "label": " Background Color"
     }
   ],
   "presets": [
     {
-      "category": "custom",
-      "name": "Newsletter"
+      "name": "Default Newsletter",
+      "category": "Custom"
     }
   ]
 }
