added icon for mail

--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -3,9 +3,9 @@
 <section class="bg-white dark:bg-gray-900" style="background-color: {{ section.settings.background_color }};">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-md sm:text-center">
-      <h2 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white">
+      <h2 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white text-center">
         {{ section.settings.newsletter_title }}
-      </h2>
+      </h2>      
       <p class="mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">
         {{ section.settings.newsletter_subtitle }}
       </p>
@@ -13,7 +13,7 @@
         <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
           <div class="relative w-full">
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-              <!-- Icon -->
+              {% render 'icon-mail' %}
             </div>
             <input
               class="block p-3 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
@@ -34,7 +34,7 @@
             </button>
           </div>
         </div>
-        <div class="mx-auto max-w-screen-sm text-sm text-left text-gray-500 newsletter-form-footer dark:text-gray-300 text-center">
+        <div class="mx-auto max-w-screen-sm text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center">
           {{ section.settings.newsletter_privacy_policy }}
         </div>
       </form>
