--- a/sections/notification-bar.liquid
+++ b/sections/notification-bar.liquid
@@ -1,16 +1,45 @@
-<div class="yummuy_only_text--wrp">
-  <span class="blinking_circle"></span>
-  {% if section.settings.notification_text != blank and section.settings.linkUrl != blank %}
-    <p>
-        <a href="{{ section.settings.linkUrl }}" target="_blank">  {{ section.settings.notification_text }} </a>
-        {% if section.settings.sub_notification_text != blank %}
-          <p>
-            {{ section.settings.sub_notification_text }}
-          </p>
-        {% endif %}
-    </p>
+{%- style -%}
+
+    .blinking_circle {
+      animation: blink 1s infinite;
+    }
+
+  @keyframes blink {
+    0%, 100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+  }
+
+{%- endstyle -%}
+
+
+<div class="flex items-center justify-center {{ section.settings.notification }}">
+  {% if section.settings.notification_text != blank %}
+    <span class="blinking_circle {{ section.settings.notification__blinking_circle }}"></span>
+    <div class="{{ section.settings.notification__simple_texts_div }}">
+      <p class="{{ section.settings.notification__style_text }}">
+        {{ section.settings.notification_text }}
+      </p>
+      
+      {% if section.settings.sub_notification_text != blank %}
+        <p class="{{ section.settings.notification__style_sub_text }}">
+          {{ section.settings.sub_notification_text }}
+        </p>
+      {% endif %}
+    </div>
+    <div class="{{ section.settings.notification__style_bold_text }}">
+      {% if section.settings.bold_text != blank and section.settings.linkUrl != blank %}
+        <a href="{{ section.settings.linkUrl }}" target="_blank">
+          {{ section.settings.bold_text }}
+        </a>
+      {% endif %}
+    </div>
   {% endif %}
 </div>
+
 
 {% schema %}
 {
@@ -19,7 +48,20 @@
     {
       "type": "text",
       "id": "notification_text",
-      "label": "Notification Text"
+      "label": "Notification Text",
+      "default": "Limited Time Offer"
+    },
+    {
+      "type": "text",
+      "id": "sub_notification_text",
+      "label": "Sub Notification Text",
+      "default": "60% Off for 6 Months"
+    },
+    {
+      "type": "text",
+      "id": "bold_text",
+      "label": "Bold Text",
+      "default": "Buy Now and Save"
     },
     {
       "type": "url",
@@ -27,9 +69,44 @@
       "label": "Link URL"
     },
     {
+      "type": "header",
+      "content": "Tailwind Styling Classes"
+    },
+    {
       "type": "text",
-      "id": "sub_notification_text",
-      "label": "Sub Notification Text"
+      "id": "notification",
+      "label": "Style Notification Container",
+      "default": "bg-purple-900 text-white py-2 gap-1"
+    },
+    {
+      "type": "text",
+      "id": "notification__blinking_circle",
+      "label": "Style Blinking Circle",
+      "default": "inline-block h-2 w-2 md:h-3 md:w-3 bg-purple-300 rounded-full mr-1"
+    },
+    {
+      "type": "text",
+      "id": "notification__simple_texts_div",
+      "label": "Style Simple Text Div",
+      "default": "leading-1 md:leading-5 pointer-events-none mr-2 md:mr-4 text-center"
+    },
+    {
+      "type": "text",
+      "id": "notification__style_text",
+      "label": "Style Notification Text",
+      "default": "text-sm md:text-base"
+    },
+    {
+      "type": "text",
+      "id": "notification__style_sub_text",
+      "label": "Style Notification Sub Text",
+      "default": "text-xs md:text-sm font-semibold"
+    },
+    {
+      "type": "text",
+      "id": "notification__style_bold_text",
+      "label": "Style Notification Sub Text",
+      "default": "text-sm md:text-xl font-bold underline hover:text-gray-300 uppercase"
     }
   ],
   "presets": [
