added button color

--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -9,7 +9,7 @@
       <p class="mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">
         {{ section.settings.newsletter_subtitle }}
       </p>
-      <form action="#" method="post">
+      <form>
         <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
           <div class="relative w-full">
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
@@ -28,7 +28,7 @@
             <button
               type="submit"
               name="commit"
-              class="py-3 px-5 w-full text-sm font-medium text-center text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+              class="py-3 px-5 w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
             >
               {{ section.settings.newsletter_button_text }}
             </button>
