notification-bar implemented using Tailwind

--- a/sections/notification-bar.liquid
+++ b/sections/notification-bar.liquid
@@ -105,7 +105,7 @@
     {
       "type": "text",
       "id": "notification__style_bold_text",
-      "label": "Style Notification Sub Text",
+      "label": "Style Notification Bold Text",
       "default": "text-sm md:text-xl font-bold underline hover:text-gray-300 uppercase"
     }
   ],
