Revamp testimonials section

--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -1,39 +1,54 @@
-{{ 'testimonials.css' | asset_url | stylesheet_tag }}
 <!-- sections/testimonials.liquid -->
-<div class="testimonials">
+<div class="testimonials {{ section.settings.testimonials_styles }}">
   <!-- Container for testimonials in row format -->
-  <div class="testimonials__container testimonials__container--row">
+  <div
+    class="testimonials__container testimonials__container--row {{ section.settings.testimonials_container_row_styles }}"
+  >
     {% for testimonial in section.blocks %}
       {% if testimonial.type == 'testimonial_row' %}
-        <div class="testimonial testimonial--row">
-          <div class="testimonial__image">
-            {{
-              testimonial.settings.testimonial_image
-              | image_url: width: 200, height: 200
-              | image_tag: class: 'testimonial__image'
-            }}
+        <div class="testimonial testimonial--row {{ testimonial.settings.testimonial_styles }}">
+          <div class="testimonial__card {{ testimonial.settings.card_styles }}">
+            {% if testimonial.settings.testimonial_image %}
+              {{
+                testimonial.settings.testimonial_image
+                | image_url: width: section.settings.image_width, height: section.settings.image_height
+                | image_tag: class: 'testimonial__image', alt: testimonial.settings.image_name
+              }}
+            {% endif %}
+            <p class="testimonial__content {{ testimonial.settings.content_styles }}">
+              {{ testimonial.settings.testimonial_content }}
+            </p>
+            <p class="testimonial__name {{ testimonial.settings.name_styles }}">
+              {{ testimonial.settings.testimonial_name }}
+            </p>
           </div>
-          <p class="testimonial__content">{{ testimonial.settings.testimonial_content }}</p>
-          <p class="testimonial__name">{{ testimonial.settings.testimonial_name }}</p>
         </div>
       {% endif %}
     {% endfor %}
   </div>
 
   <!-- Container for testimonials in column format -->
-  <div class="testimonials__container testimonials__container--column">
+  <div
+    class="testimonials__container testimonials__container--column {{ section.settings.testimonials_container_column_styles }}"
+  >
     {% for testimonial in section.blocks %}
       {% if testimonial.type == 'testimonial_column' %}
-        <div class="testimonial testimonial--column">
-          <div class="testimonial__image">
-            {{
-              testimonial.settings.testimonial_image
-              | image_url: width: 200, height: 200
-              | image_tag: class: 'testimonial__image'
-            }}
+        <div class="testimonial testimonial--column {{ testimonial.settings.testimonial_styles }}">
+          <div class="testimonial__card {{ testimonial.settings.card_styles }}">
+            {% if testimonial.settings.testimonial_image %}
+              {{
+                testimonial.settings.testimonial_image
+                | image_url: width: section.settings.image_width, height: section.settings.image_height
+                | image_tag: class: 'testimonial__image', alt: testimonial.settings.image_name
+              }}
+            {% endif %}
+            <p class="testimonial__content {{ testimonial.settings.content_styles }}">
+              {{ testimonial.settings.testimonial_content }}
+            </p>
+            <p class="testimonial__name {{ testimonial.settings.name_styles }}">
+              {{ testimonial.settings.testimonial_name }}
+            </p>
           </div>
-          <p class="testimonial__content">{{ testimonial.settings.testimonial_content }}</p>
-          <p class="testimonial__name">{{ testimonial.settings.testimonial_name }}</p>
         </div>
       {% endif %}
     {% endfor %}
@@ -43,6 +58,40 @@
 {% schema %}
 {
   "name": "Testimonials",
+  "settings": [
+    {
+      "type": "header",
+      "content": "Apply Tailwind CSS Classes",
+      "info": "Note: Insert classes with space between them."
+    },
+    {
+      "type": "textarea",
+      "label": "Testimonials Section Styles",
+      "id": "testimonials_styles"
+    },
+    {
+      "type": "textarea",
+      "label": "Testimonials Container Row Styles",
+      "id": "testimonials_container_row_styles",
+      "default": "flex flex-row"
+    },
+    {
+      "type": "textarea",
+      "label": "Testimonials Container Column Styles",
+      "id": "testimonials_container_column_styles",
+      "default": "flex flex-col"
+    },
+    {
+      "type": "number",
+      "label": "Image Width in px",
+      "id": "image_width"
+    },
+    {
+      "type": "number",
+      "label": "Image Height in px",
+      "id": "image_height"
+    }
+  ],
   "blocks": [
     {
       "type": "testimonial_row",
@@ -54,6 +103,11 @@
           "id": "testimonial_image"
         },
         {
+          "type": "text",
+          "label": "Alt Text",
+          "id": "image_name"
+        },
+        {
           "type": "textarea",
           "label": "Testimonial Content",
           "id": "testimonial_content"
@@ -62,6 +116,31 @@
           "type": "text",
           "label": "Name",
           "id": "testimonial_name"
+        },
+        {
+          "type": "header",
+          "content": "Apply Tailwind CSS Classes",
+          "info": "Note: Insert classes with space between them."
+        },
+        {
+          "type": "textarea",
+          "label": "Testimonial Styles",
+          "id": "testimonial_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Card Styles",
+          "id": "card_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Content Styles",
+          "id": "content_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Name Styles",
+          "id": "name_styles"
         }
       ]
     },
@@ -75,14 +154,44 @@
           "id": "testimonial_image"
         },
         {
-          "type": "textarea",
-          "label": "Testimonial Content",
-          "id": "testimonial_content"
+          "type": "text",
+          "label": "Alt Text",
+          "id": "image_name"
+        },
+        {
+          "type": "number",
+          "label": "Image Width in px",
+          "id": "image_width"
         },
         {
           "type": "text",
           "label": "Name",
           "id": "testimonial_name"
+        },
+        {
+          "type": "header",
+          "content": "Apply Tailwind CSS Classes",
+          "info": "Note: Insert classes with space between them."
+        },
+        {
+          "type": "textarea",
+          "label": "Testimonial Styles",
+          "id": "testimonial_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Card Styles",
+          "id": "card_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Content Styles",
+          "id": "content_styles"
+        },
+        {
+          "type": "textarea",
+          "label": "Name Styles",
+          "id": "name_styles"
         }
       ]
     }
