--- a/sections/dev__tw-newsletter.liquid
+++ b/sections/dev__tw-newsletter.liquid
@@ -5,11 +5,11 @@
     <div class="mx-auto max-w-screen-md sm:text-center">
       <h2 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white text-center">
         {{ section.settings.newsletter_title }}
-      </h2>      
+      </h2>
       <p class="mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">
         {{ section.settings.newsletter_subtitle }}
       </p>
-      <form>
+      {% form 'customer' %}
         <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
           <div class="relative w-full">
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
@@ -37,7 +37,7 @@
         <div class="mx-auto max-w-screen-sm text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center">
           {{ section.settings.newsletter_privacy_policy }}
         </div>
-      </form>
+      {% endform %}
     </div>
   </div>
 </section>
@@ -84,7 +84,7 @@
   ],
   "presets": [
     {
-      "name": "Default Newsletter",
+      "name": "Newsletter - Tailwind",
       "category": "Custom"
     }
   ]
